# A003558-universal-clock

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  bump_version.py  check_version.py  diagnose.ps1  fields-timeline.html  fields-wheel.html  index.html  lemniscate-live.html  lemniscate.html  octahedron-live.html  pypirecovery.txt  pyproject.toml  requirements.txt  ruff.toml  task.ps1  tasks.ps1
.github/workflows/: ci-viz.yml  ci.yml  pages.yml  publish.yml  pytest.yml  release.yml
docs/: index.html  lightbox.js  styles.css
docs/hub/: manifest.json
examples/: demo_octonion_coupling.py  demo_prime_power_spikes.py  demo_staircase.py
scripts/: make_blend.py
site/: index.html  lightbox.js  styles.css
src/a003558/: bump_version.py  export_blender.py  viz.py  viz_octa.py
src/a003558_universal_clock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_cycle_smoke.py  test_viz_extra.py  test_viz_smoke.py
tools/: generate_lemniscate.py  generate_octahedron.py
web/: fields-timeline.html  fields-wheel.html  lemniscate-live.html  lemniscate.html  octahedron-live.html  task.ps1
